examples/apps/voteapp/kubernetes/database-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: database-deployment
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: database
        image: mongo:3.4
        ports:
        - containerPort: 27017
