examples/apps/voteapp/kubernetes/queue-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: queue-deployment
  labels:
    app: queue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: queue
  template:
    metadata:
      labels:
        app: queue
    spec:
      containers:
      - name: queue
        image: redis:3.2
        ports:
        - containerPort: 6379
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - '[ $(redis-cli ping) = PONG ]'
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 5
