examples/apps/voteapp/kubernetes/vote-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: vote-deployment
  labels:
    app: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
        - name: vote
          image: subfuzion/vote-api
          ports:
          - containerPort: 3000
