examples/apps/voteapp/kubernetes/queue-service.yml
apiVersion: v1
kind: Service
metadata:
  name: queue
spec:
  selector:
    app: queue
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
