examples/apps/voteapp/kubernetes/vote-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vote
spec:
  type: NodePort
  selector:
    app: vote
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
