examples/apps/voteapp/kubernetes/vote-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: vote-ingress
spec:
  backend:
    serviceName: vote
    servicePort: 3000
